# rcd-theory

./: .gitignore  CITATION.cff  LICENSE  README-technical.md  README.md  af.py  af_app.py  novelty_trigger.py  pyproject.toml  rcd_model.py  streamlit_interface.py
.devcontainer/: devcontainer.json
app/: memory_buffer.py
docs/: README_Memory.md  kce.md  modules.md  neuro_analog.md  rcd-topological_memory_section.tex  references.md  timeline.md  whitepaper.md
examples/: minimal_simulation_interface.py  reactivation_trigger.py
notebooks/: recursive_loops_demo.ipynb
rcd-theory/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  alignment_metrics.py  attractor_injection.py  lake_state.py  memory_buffer.py  phase_space.py  rcd_memory_topology.py  rcd_model.py  simulation_runner.py
